--- a/THANKS
+++ b/THANKS
@@ -419,3 +419,15 @@ Marco Vassura - suggestion and code.
 Luigi Valbonesi - suggestions.
 
 fernandolordao - suggestion.
+
+Wizard - suggestion.
+
+ant7 - suggestion.
+
+Lizio - suggestions.
+
+Omar Ben Ali - suggestions for the Morocco custom version.
+
+Nguyen Trong Hieu - help with the Vietnamese translation of the Algeria custom version.
+
+Arsenio Stabile - suggestions.
