Upgrade to FET 5.28.4

--- a/THANKS
+++ b/THANKS
@@ -431,3 +431,5 @@ Omar Ben Ali - suggestions for the Morocco custom version.
 Nguyen Trong Hieu - help with the Vietnamese translation of the Algeria custom version.
 
 Arsenio Stabile - suggestions.
+
+alex - suggestion.
