--- a/ChangeLog
+++ b/ChangeLog
@@ -1832,8 +1832,12 @@ Versions 5.28.0 - 5.28.v
 	- Source cleanup.
 - Version 5.28.3
 	- After a successful single generation (or after an impossible one), an attention sound will be emitted. Also, after all the timetables finished
-	in a multiple generation, the same attention sound will be emitted (suggested by Maouhoub and uni_instructor).
+	(successfully, impossibly, or with time limit exceeded) in a multiple generation, the same attention sound will be emitted (suggested by Maouhoub
+	and uni_instructor).
 	- Updated the Vietnamese translation, by Nguyễn Hữu Duyệt.
 	- Updated the Arabic translation, by Silver.
 	- Added a new Vietnamese example file, by Nguyễn Hữu Duyệt.
 	- Added a new Namibian example file, by Bobby.
+- Version 5.28.4
+	- Bug fix: not allowing the file name to start with space(s), as the HTML results do not work (reported by Volker Dirr).
+	- Updated the Arabic translation, by Silver.
