--- a/THANKS
+++ b/THANKS
@@ -433,3 +433,5 @@ Nguyen Trong Hieu - help with the Vietnamese translation of the Algeria custom v
 Arsenio Stabile - suggestions.
 
 alex - suggestion.
+
+Handaya - suggestions.
