--- a/THANKS
+++ b/THANKS
@@ -435,3 +435,7 @@ Arsenio Stabile - suggestions.
 alex - suggestion.
 
 Handaya - suggestions.
+
+Sudharshan K M - example file.
+
+Nataraj Urs H D - example file.
