--- a/THANKS
+++ b/THANKS
@@ -156,7 +156,7 @@ Massimo Mancini - suggestions.
 
 Regina V. Kryvakovska - Russian translation additional checking.
 
-Bingen - suggestions.
+ßingen - suggestions.
 
 Angela - suggestions.
 
@@ -439,3 +439,11 @@ Handaya - suggestions.
 Sudharshan K M - example file.
 
 Nataraj Urs H D - example file.
+
+Alexandre R. Soares - Brazilian Portuguese translation.
+
+hudrea - suggestions.
+
+Udo Schütz - suggestions.
+
+Jijo Jose - example file.
