--- a/THANKS
+++ b/THANKS
@@ -432,7 +432,7 @@ Nguyen Trong Hieu - help with the Vietnamese translation of the Algeria custom v
 
 Arsenio Stabile - suggestions.
 
-alex - suggestion.
+Vangelis Karafillidis - suggestion.
 
 Handaya - suggestions.
 
@@ -447,3 +447,7 @@ hudrea - suggestions.
 Udo Schütz - suggestions.
 
 Jijo Jose - example file.
+
+Fernando Poblete - suggestions.
+
+Benahmed Abdelkrim - suggestion.
