--- a/THANKS
+++ b/THANKS
@@ -451,3 +451,9 @@ Jijo Jose - example file.
 Fernando Poblete - suggestions.
 
 Benahmed Abdelkrim - suggestion.
+
+math user - suggestion.
+
+ChicagoPianoTuner - suggestion.
+
+MING-KIAN JONATHAN CEDRIC LEE KIM GNOK - suggestion.
