--- a/ChangeLog
+++ b/ChangeLog
@@ -1875,3 +1875,5 @@ Versions 5.29.0 - 5.29.v
 - Version 5.29.5
 	- Updated to Qt 5.6.1.
 	- Rare crash bug fix in the activity planning form (reported by Benahmed Abdelkrim).
+- Version 5.29.6
+	- Updated to Qt 5.7.0 (thus, the Windows version now uses MinGW 5.3.0).
